<resources>
    <string name="app_name">StupidEnumTricks</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_view_terms">View Terms &amp; Conditions</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_passwords_dont_match">Passwords do not match</string>

    <string name="title_activity_main">Welcome</string>

    <string name="text_activity_main">Welcome to AwesomeApp!</string>
    <string name="text_activity_terms">Terms &amp; Conditions Of Use</string>
    <string name="title_activity_adorable_cat">Meow</string>
</resources>
